--- a/Dashboard1/SkyWalk/index.html
+++ b/Dashboard1/SkyWalk/index.html
@@ -17,7 +17,9 @@
             border-radius: 1rem;
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-            border-top: 4px solid #6366f1; /* Indigo accent */
+            border-bottom: 4px solid #6366f1; /* Indigo accent */
+            display: flex;
+            flex-direction: column;
         }
         .card:hover {
             transform: translateY(-5px);
@@ -27,8 +29,15 @@
             background-color: #e0e7ff; /* A lighter indigo */
             color: #4338ca; /* A deep indigo */
         }
-        .rtl-grid {
-            direction: rtl;
+        .cost-item-bar {
+            background-color: #eef2ff;
+            border-radius: 0.5rem;
+            overflow: hidden;
+            height: 8px;
+        }
+        .cost-item-bar-fill {
+            background-color: #6366f1;
+            height: 100%;
         }
     </style>
 </head>
@@ -50,7 +59,7 @@
                 <div class="card p-6">
                     <div class="flex items-center mb-3">
                         <div class="icon-bg-tech p-3 rounded-full ml-4"><i class="fas fa-walking fa-2x"></i></div>
-                        <h2 class="text-2xl font-bold text-indigo-700">اسکای‌واک و مسیر دوچرخه آسمان</h2>
+                        <h2 class="text-2xl font-bold text-indigo-700">اسکای‌واک و دوچرخه آسمان</h2>
                     </div>
                     <p class="text-gray-600">دو مسیر پیاده‌روی و دوچرخه‌سواری مجزا و معلق در میان تاج درختان، با ایستگاه‌های تماشا برای تجربه‌ای بی‌نظیر از جنگل.</p>
                 </div>
@@ -75,7 +84,7 @@
                  <div class="rounded-2xl overflow-hidden shadow-xl"><img src="https://uploadkon.ir/uploads/458618_25Gemini-Generated-Image-b1ri5zb1ri5zb1ri.png" alt="اسکای واک در کنار ساحل" class="w-full h-full object-cover"></div>
                  <div class="rounded-2xl overflow-hidden shadow-xl sm:col-span-2"><img src="https://uploadkon.ir/uploads/0a6418_25Gemini-Generated-Image-ae1nryae1nryae1n.png" alt="چشم انداز هوایی از کل مجموعه" class="w-full h-full object-cover"></div>
             </div>
-             <div class="space-y-8">
+             <div class="space-y-8 lg:order-first">
                 <!-- Card 3: The Forest Basecamp -->
                 <div class="card p-6">
                     <div class="flex items-center mb-3">
@@ -95,19 +104,119 @@
             </div>
         </div>
 
-
         <!-- Strategic Advantages Section -->
-        <div class="mt-12 bg-white rounded-2xl shadow-lg p-8">
+        <div class="bg-white rounded-2xl shadow-lg p-8 mb-12">
             <h2 class="text-3xl font-bold text-center text-indigo-800 mb-8">توجیه استراتژیک و مزایا</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 text-center rtl-grid">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8 text-center">
                 <div class="flex flex-col items-center"><div class="bg-red-100 text-red-700 p-4 rounded-full mb-4"><i class="fas fa-landmark fa-2x"></i></div><h3 class="text-xl font-bold mb-2">لندمارک ملی</h3><p class="text-gray-600 text-sm">ایجاد یک تصویر قدرتمند و آینده‌نگر برای نمک‌آبرود.</p></div>
-                <div class="flex flex-col items-center"><div class="bg-yellow-100 text-yellow-700 p-4 rounded-full mb-4"><i class="fas fa-users fa-2x"></i></div><h3 class="text-xl font-bold mb-2">جذب مخاطب گسترده</h3><p class="text-gray-600 text-sm">جذابیت برای خانواده‌ها، جوانان، دوستداران طبیعت و فناوری.</p></div>
+                <div class="flex flex-col items-center"><div class="bg-yellow-100 text-yellow-700 p-4 rounded-full mb-4"><i class="fas fa-users fa-2x"></i></div><h3 class="text-xl font-bold mb-2">جذب مخاطب گسترده</h3><p class="text-gray-600 text-sm">جذابیت برای خانواده‌ها، دوستداران طبیعت و فناوری.</p></div>
                 <div class="flex flex-col items-center"><div class="bg-green-100 text-green-700 p-4 rounded-full mb-4"><i class="fas fa-chart-pie fa-2x"></i></div><h3 class="text-xl font-bold mb-2">سودآوری چندبعدی</h3><p class="text-gray-600 text-sm">از فروش بلیط، کرایه دوچرخه، کافه و فروشگاه.</p></div>
                 <div class="flex flex-col items-center"><div class="bg-blue-100 text-blue-700 p-4 rounded-full mb-4"><i class="fas fa-cloud-sun-rain fa-2x"></i></div><h3 class="text-xl font-bold mb-2">جاذبه چهارفصل</h3><p class="text-gray-600 text-sm">گنبد نوآوری به عنوان یک فضای سرپوشیده جذابیت دائمی ایجاد می‌کند.</p></div>
                 <div class="flex flex-col items-center"><div class="bg-purple-100 text-purple-700 p-4 rounded-full mb-4"><i class="fas fa-book-reader fa-2x"></i></div><h3 class="text-xl font-bold mb-2">ارزش آموزشی</h3><p class="text-gray-600 text-sm">آموزش مفاهیم حفاظت از محیط زیست و فناوری پایدار.</p></div>
             </div>
         </div>
 
+        <!-- NEW: Costs Section -->
+        <div class="bg-white rounded-2xl shadow-lg p-8">
+            <h2 class="text-3xl font-bold text-center text-indigo-800 mb-2">برآورد هزینه های پروژه</h2>
+            <p class="text-center text-gray-500 mb-10">(مبالغ به میلیون تومان)</p>
+
+            <div id="costs-container" class="space-y-8">
+                <!-- Data will be injected here by JavaScript -->
+            </div>
+
+            <div class="mt-12 pt-6 border-t-2 border-dashed border-indigo-200">
+                <div class="flex justify-between items-center bg-indigo-700 text-white p-6 rounded-2xl shadow-lg">
+                    <h3 class="text-2xl font-bold">مجموع کل هزینه‌ها</h3>
+                    <div class="text-left">
+                        <p id="total-cost" class="text-4xl font-extrabold">229,000</p>
+                        <span class="text-indigo-200">میلیون تومان</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+    <script>
+        const costsData = [
+            {
+                category: "هزینه قبل از بهره برداری",
+                icon: "fa-clipboard-list",
+                total: 4000,
+                items: [
+                    { name: "طراحی", cost: 2500 },
+                    { name: "نظارت", cost: 1500 },
+                ]
+            },
+            {
+                category: "سازه های اصلی و جاذبه ها",
+                icon: "fa-archway",
+                total: 190000,
+                items: [
+                    { name: "پل ارتباطی و اسکای واک", cost: 90000 },
+                    { name: "تراموا", cost: 20000 },
+                    { name: "گنبد نوآوری", cost: 80000 },
+                ]
+            },
+            {
+                category: "ساختمان ها و محوطه سازی",
+                icon: "fa-campground",
+                total: 35000,
+                items: [
+                    { name: "پایگاه جنگل (ورودی)", cost: 15000 },
+                    { name: "میدان اکو و فضای سبز", cost: 5000 },
+                    { name: "راه دسترسی", cost: 10000 },
+                    { name: "سرویس های بهداشتی", cost: 5000 },
+                ]
+            }
+        ];
+
+        const costsContainer = document.getElementById('costs-container');
+        const totalCostElement = document.getElementById('total-cost');
+
+        const grandTotal = costsData.reduce((sum, group) => sum + group.total, 0);
+        totalCostElement.textContent = grandTotal.toLocaleString('fa-IR');
+
+        costsData.forEach(group => {
+            const groupElement = document.createElement('div');
+            groupElement.className = 'card p-6 !border-indigo-200';
+
+            let itemsHtml = '';
+            group.items.forEach(item => {
+                const percentage = group.total > 0 ? (item.cost / group.total) * 100 : 0;
+                itemsHtml += `
+                    <div class="mb-4">
+                        <div class="flex justify-between items-center mb-1 text-gray-600">
+                            <span>${item.name}</span>
+                            <span class="font-bold text-indigo-800">${item.cost.toLocaleString('fa-IR')}</span>
+                        </div>
+                        <div class="cost-item-bar">
+                            <div class="cost-item-bar-fill" style="width: ${percentage}%"></div>
+                        </div>
+                    </div>
+                `;
+            });
+
+            groupElement.innerHTML = `
+                <div class="flex justify-between items-start mb-4">
+                    <div>
+                        <div class="flex items-center mb-2">
+                            <div class="icon-bg-tech p-3 rounded-full ml-3"><i class="fas ${group.icon} fa-lg"></i></div>
+                            <h3 class="text-xl font-bold text-indigo-700">${group.category}</h3>
+                        </div>
+                    </div>
+                    <div class="text-right">
+                        <p class="text-2xl font-bold text-indigo-800">${group.total.toLocaleString('fa-IR')}</p>
+                        <span class="text-sm text-gray-500">میلیون تومان</span>
+                    </div>
+                </div>
+                <div>
+                    ${itemsHtml}
+                </div>
+            `;
+            costsContainer.appendChild(groupElement);
+        });
+    </script>
 </body>
 </html>
