--- a/Dashboard1/ArsehMiani/index.html
+++ b/Dashboard1/ArsehMiani/index.html
@@ -52,9 +52,14 @@
             </p>
         </header>
 
-        <!-- Main Image -->
-        <div class="mb-12 rounded-2xl overflow-hidden shadow-2xl">
-            <img src="https://uploadkon.ir/uploads/529818_25عرصصهGemini-Generated-Image-yywlreyywlreyywl.png" alt="نمای کلی از پروژه عرصه میانی" class="w-full h-auto object-cover">
+        <!-- Image Gallery -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
+             <div class="rounded-2xl overflow-hidden shadow-2xl">
+                <img src="https://uploadkon.ir/uploads/529818_25%D8%B9%D8%B1%D8%B5%D8%B5%D9%87Gemini-Generated-Image-yywlreyywlreyywl.png" alt="نمای کلی از پروژه عرصه میانی" class="w-full h-full object-cover aspect-video">
+            </div>
+            <div class="rounded-2xl overflow-hidden shadow-2xl">
+                <img src="https://uploadkon.ir/uploads/529818_25%D8%B9%D8%B1%D8%B5%D9%87Gemini-Generated-Image-114vm2114vm2114v.png" alt="گذرگاه تجاری و فضای سبز پروژه عرصه میانی" class="w-full h-full object-cover aspect-video">
+            </div>
         </div>
 
         <!-- Key Components Section -->
@@ -80,11 +85,6 @@
                 <div class="flex items-center mb-4"><div class="icon-bg p-3 rounded-full ml-4"><i class="fas fa-mobile-alt fa-2x"></i></div><h3 class="text-2xl font-bold text-orange-700">زیرساخت هوشمند</h3></div>
                 <p class="text-gray-600 flex-grow">تجربه مدرن بازدیدکننده با اپلیکیشن اختصاصی برای رزرو و خرید بلیت، و پارکینگ هوشمند.</p>
             </div>
-        </div>
-        
-        <!-- Second Image Section -->
-        <div class="mb-12 rounded-2xl overflow-hidden shadow-2xl">
-            <img src="https://uploadkon.ir/uploads/529818_25عرصهGemini-Generated-Image-114vm2114vm2114v.png" alt="گذرگاه تجاری و فضای سبز پروژه عرصه میانی" class="w-full h-auto object-cover">
         </div>
 
         <!-- Strategic Advantages Section -->
