--- a/Dashboard/Infra/index.html
+++ b/Dashboard/Infra/index.html
@@ -91,7 +91,7 @@
             <p class="text-xl text-gray-600">برآورد نهایی هزینه بر اساس محاسبات دقیق و تفکیکی</p>
             <div class="mt-8 bg-white inline-block p-6 rounded-2xl shadow-2xl border-t-8 border-[#003366]">
                 <p class="text-lg text-gray-700">مجموع کل هزینه نهایی مورد نیاز</p>
-                <p class="text-6xl font-black text-[#003366] tracking-tight">۳,۴۹۲</p>
+                <p class="text-6xl font-black text-[#003366] tracking-tight">۳,۷۲۰</p>
                 <p class="text-2xl text-gray-500">میلیارد تومان</p>
             </div>
         </header>
@@ -178,12 +178,12 @@
             <h2 class="section-title">۴. هزینه‌های پروژه‌های فرامحله‌ای</h2>
             <div class="summary-card max-w-md mx-auto">
                 <p class="text-lg font-bold text-gray-700">🏗️ جمع هزینه پروژه‌های فرامحله‌ای</p>
-                <p class="text-4xl font-black text-[#1a365d] mt-2">۲,۶۵۱.۸ <span class="text-2xl font-bold">میلیارد تومان</span></p>
+                <p class="text-4xl font-black text-[#1a365d] mt-2">۲,۸۷۹.۸ <span class="text-2xl font-bold">میلیارد تومان</span></p>
             </div>
              <p class="text-center text-gray-600 max-w-3xl mx-auto mb-10">
                 علاوه بر زیرساخت‌های داخل محلات، پروژه‌های کلان و حیاتی دیگری در سطح کل شهرک اجرا می‌شوند که بخش عمده‌ای از بودجه کل را تشکیل می‌دهند.
             </p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-center">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 text-center">
                 <div class="card">
                     <h3 class="font-bold text-lg mb-2">🌊 زهکشی و هدایت آب‌های سطحی</h3>
                     <p class="text-4xl font-black text-[#1a365d]">۱,۴۷۳.۳</p>
@@ -192,6 +192,13 @@
                 <div class="card">
                     <h3 class="font-bold text-lg mb-2">💧 شبکه فاضلاب و تصفیه‌خانه</h3>
                     <p class="text-4xl font-black text-[#1a365d]">۹۲۱.۳</p>
+                    <p class="text-gray-500">میلیارد تومان</p>
+                </div>
+                <div class="card">
+                    <h3 class="font-bold text-lg mb-2">
+                        🔄 اصلاح هندسی ورودی
+                    </h3>
+                    <p class="text-4xl font-black text-[#1a365d]">۲۲۸.۰</p>
                     <p class="text-gray-500">میلیارد تومان</p>
                 </div>
                 <div class="card">
@@ -251,12 +258,12 @@
                     <div class="text-5xl text-gray-400">+</div>
                     <div class="card p-6 bg-green-100 border-b-4 border-green-500">
                         <p>هزینه پروژه‌های فرامحله‌ای</p>
-                        <p class="text-4xl font-black text-green-800 mt-2">۲,۶۵۱.۸</p>
+                        <p class="text-4xl font-black text-green-800 mt-2">۲,۸۷۹.۸</p>
                     </div>
                      <div class="text-5xl text-gray-400">=</div>
                     <div class="card p-6 bg-indigo-100 border-b-4 border-indigo-500">
                         <p>مجموع کل هزینه</p>
-                        <p class="text-4xl font-black text-indigo-800 mt-2">۳,۴۹۲.۰</p>
+                        <p class="text-4xl font-black text-indigo-800 mt-2">۳,۷۲۰.۰</p>
                     </div>
                 </div>
             </div>
