--- a/Package/index.html
+++ b/Package/index.html
@@ -21,15 +21,15 @@
             margin: 0 auto;
         }
         .logo {
-            height: 110px; /* Increased size */
+            height: 110px;
             width: auto;
             object-fit: contain;
         }
         .logo.center {
-            height: 230px; /* Increased size */
+            height: 230px;
         }
         .logo.right {
-             height: 130px; /* Specifically increased */
+             height: 130px;
         }
         .project-card {
             background-color: white;
@@ -114,6 +114,38 @@
             color: #1f2937;
             margin-top: auto; /* Pushes title to the bottom */
         }
+        /* Styles for the new dashboard card */
+        .dashboard-card {
+            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
+            color: white;
+            display: block;
+            padding: 2rem;
+            text-align: right;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+        }
+        .dashboard-card:hover {
+            background: linear-gradient(135deg, #1c3276 0%, #2575e8 100%);
+        }
+        .dashboard-title {
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: #f1f5f9;
+        }
+        .dashboard-icon {
+            width: 50px;
+            height: 50px;
+            color: #93c5fd;
+            flex-shrink: 0;
+            margin-left: 1.5rem;
+        }
+        .dashboard-card .tooltip {
+            background-color: rgba(17, 24, 39, 0.95);
+        }
+        .dashboard-card .tooltip p {
+            font-size: 1.125rem;
+        }
     </style>
 </head>
 <body class="p-4 sm:p-6 md:p-8">
@@ -127,6 +159,23 @@
             </div>
             <h1 class="text-3xl sm:text-4xl font-extrabold text-gray-800">بسته های پیشنهادی پروژه های بالقوه نمک آبرود</h1>
         </header>
+
+        <!-- New Dashboard Card -->
+        <div class="mb-8">
+            <a href="https://hrtorabii-404.github.io/namakabroud-report/Dashboard/20pFi/" class="project-card dashboard-card">
+                <div class="flex items-center">
+                    <svg class="dashboard-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 1 0 7.5 7.5h-7.5V6Z" />
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0 0 13.5 3v7.5Z" />
+                    </svg>
+                    <h2 class="dashboard-title">داشبورد تحلیلی پروژه‌های سرمایه‌گذاری نمک‌آبرود</h2>
+                </div>
+                <div class="tooltip">
+                    <p>نمایش اطلاعات کلیدی و نمودارهای پویا بر اساس 20 بسته پروژه های پیشنهادی</p>
+                </div>
+            </a>
+        </div>
+
 
         <!-- Projects Grid -->
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
