--- a/Package/index.html
+++ b/Package/index.html
@@ -118,11 +118,8 @@
         .dashboard-card {
             background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
             color: white;
-            display: block;
             padding: 2rem;
             text-align: right;
-            flex-direction: row;
-            align-items: center;
             justify-content: flex-start;
         }
         .dashboard-card:hover {
@@ -170,6 +167,7 @@
                     </svg>
                     <h2 class="dashboard-title">داشبورد تحلیلی پروژه‌های سرمایه‌گذاری نمک‌آبرود</h2>
                 </div>
+                <p class="text-sm font-light text-slate-300 mt-4">با کلیک بر روی هر یک از پروژه های 20 گانه، برنامه فیزیکی آن با جزییات نمایش داده می شود</p>
                 <div class="tooltip">
                     <p>نمایش اطلاعات کلیدی و نمودارهای پویا بر اساس 20 بسته پروژه های پیشنهادی</p>
                 </div>
